--- a/client/lab_1/index.html
+++ b/client/lab_1/index.html
@@ -6,7 +6,27 @@
   <title>Josue Tlapechco</title>
 </head>
 <body>
-  
+  <h1>Josue's Labs for INST377</h1>
+  <div>
+    <div>
+      <h3>Albums</h3>
+      <ol>
+        <ul>Karate - Some Boots</ul>
+        <ul>Hum - Downward is Heavenward</ul>
+        <ul>Descendents - Milo Goes to College</ul>
+        <ul>Steely Dan - Aja</ul>
+        <ul>Sleater Kinney - Dig Me Out</ul>
+      </ol>
+    </div>
+      <h3>Image Carousel</h3>
+      <div>
+        
+      </div>
+    <div>
+      
+    </div>
+
+  </div>
 </body>
 </html>
 include your HTML opening tags
