--- a/client/lab_1/index.html
+++ b/client/lab_1/index.html
@@ -1,35 +1,65 @@
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Josue Tlapechco</title>
-</head>
-<body>
-  <h1>Josue's Labs for INST377</h1>
-  <div>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Josue Tlapechco's Lab 1</title>
+  </head>
+  <body>
+    <h1>Josue's Labs for INST377</h1>
     <div>
-      <h3>Albums</h3>
-      <ol>
-        <ul>Karate - Some Boots</ul>
-        <ul>Hum - Downward is Heavenward</ul>
-        <ul>Descendents - Milo Goes to College</ul>
-        <ul>Steely Dan - Aja</ul>
-        <ul>Sleater Kinney - Dig Me Out</ul>
-      </ol>
-    </div>
+      <div>
+        <h3>Albums</h3>
+        <ol>
+          <ul>
+            Karate - Some Boots
+          </ul>
+          <ul>
+            Hum - Downward is Heavenward
+          </ul>
+          <ul>
+            Descendents - Milo Goes to College
+          </ul>
+          <ul>
+            Steely Dan - Aja
+          </ul>
+          <ul>
+            Sleater Kinney - Dig Me Out
+          </ul>
+        </ol>
+      </div>
       <h3>Image Carousel</h3>
       <div>
-        
+        <img src="../lab_1/images/mochi.jpg" width="75" />
+        <img src="../lab_1/images/mochi.gif" width="75" />
+        <img src="../lab_1/images/mochi.png" width="75" />
+        <img src="../lab_1/images/mochi.svg" width="75" />
       </div>
-    <div>
-      
+      <div>
+        <p>
+          The images above are of four mochi balls, however, they are unqiue as
+          they are made up of different files. The first file is a jpeg image,
+          which is a low storage photo. The second is a gif, which is a moving
+          animation, but its a little lower quality. The third is a png, which
+          is a higher quality image that supports transparent pixels, but cant
+          be enlarged or modified. The last is an svg, which is a vector image
+          and can be manipulated freely wihtout losing image quality.
+        </p>
+      </div>
+      <div>
+        <footer>
+          <a
+            href="https://github.com/JosueTlapechco"
+            target="_blank"
+            rel="noopener noreferrer"
+            >Josue Tlapechco's github</a
+          >
+        </footer>
+      </div>
     </div>
-
-  </div>
-</body>
+  </body>
 </html>
-include your HTML opening tags
+<!--include your HTML opening tags
 and your hidden "head" tag
 and your "title" tag
 
@@ -48,4 +78,4 @@ full-width wrapper div
             description of images
 
 
-full-width page footer containing your github account name and a link to your gitHub account
+full-width page footer containing your github account name and a link to your gitHub account a-->
