hooked up style sheet

--- a/client/lab_2/index.html
+++ b/client/lab_2/index.html
@@ -1,10 +1,82 @@
-Replace this with your complete HTML from Lab 1
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Josue Tlapechco's Lab 1</title>
+    <link rel="stylesheet" href="style.css">
+  </head>
+  <body>
+    <h1>Josue's Labs for INST377</h1>
+    <div class = "wrapper">
+      <div class = "container">
+        <h3>Albums</h3>
+        <ol>
+          <li>
+            Karate - Some Boots
+          </li>
+          <li>
+            Hum - Downward is Heavenward
+          </li>
+          <li>
+            Descendents - Milo Goes to College
+          </li>
+          <li>
+            Steely Dan - Aja
+          </li>
+          <li>
+            Sleater Kinney - Dig Me Out
+          </li>
+        </ol>
+      </div>
+      <h3>Image Carousel</h3>
+      <div>
+        <img src="../lab_1/images/mochi.jpg" width="75" />
+        <img src="../lab_1/images/mochi.gif" width="75" />
+        <img src="../lab_1/images/mochi.png" width="75" />
+        <img src="../lab_1/images/mochi.svg" width="75" />
+      </div>
+      <div>
+        <p>
+          The images above are of four mochi balls, however, they are unqiue as
+          they are made up of different files. The first file is a jpeg image,
+          which is a low storage photo. The second is a gif, which is a moving
+          animation, but its a little lower quality. The third is a png, which
+          is a higher quality image that supports transparent pixels, but cant
+          be enlarged or modified. The last is an svg, which is a vector image
+          and can be manipulated freely wihtout losing image quality.
+        </p>
+      </div>
+      <div>
+        <footer>
+          <a
+            href="https://github.com/JosueTlapechco"
+            target="_blank"
+            rel="noopener noreferrer"
+            >Josue Tlapechco's github</a
+          >
+        </footer>
+      </div>
+    </div>
+  </body>
+</html>
+<!--include your HTML opening tags
+and your hidden "head" tag
+and your "title" tag
 
-Hook it up to CSS by including style.css in the <head> tag
 
-Then add CSS class names to your HTML to make it look like the lab pictures.
-For example: <div class="selector">
+full-width wrapper div
+  header containing: YOUR NAME's Labs For INST377
+  container div
+      left div
+        sub-header saying "albums"
+        Your top 5 albums in an ordered list
+      right div (main div for the site)
+        sub-header saying "image carousel"
+          div to contain four images
+            four images of mochi from your readings, all square (they're four different image types!)
+          div to contain a description or text
+            description of images
 
-You should not need to edit the CSS to do this, only the HTML.
 
-Don't forget to add an actual set of image descriptions to your image carousel.
+full-width page footer containing your github account name and a link to your gitHub account a-->
