--- a/client/lab_2/index.html
+++ b/client/lab_2/index.html
@@ -7,48 +7,52 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1>Josue's Labs for INST377</h1>
+    <header class = "header"><h1>Josue's Labs for INST377</h1></header>
     <div class = "wrapper">
       <div class = "container">
-        <h3>Albums</h3>
-        <ol>
-          <li>
-            Karate - Some Boots
-          </li>
-          <li>
-            Hum - Downward is Heavenward
-          </li>
-          <li>
-            Descendents - Milo Goes to College
-          </li>
-          <li>
-            Steely Dan - Aja
-          </li>
-          <li>
-            Sleater Kinney - Dig Me Out
-          </li>
-        </ol>
+        <div class = "left_section box">
+          <h2>Albums</h2>
+          <ol class = "box">
+            <li>
+              Karate - Some Boots
+            </li>
+            <li>
+              Hum - Downward is Heavenward
+            </li>
+            <li>
+              Descendents - Milo Goes to College
+            </li>
+            <li>
+              Steely Dan - Aja
+            </li>
+            <li>
+              Sleater Kinney - Dig Me Out
+            </li>
+          </ol>
+        </div>
+        <div class = "right_section box">
+          <h2>Image Carousel</h2>
+          <div class = "grid img">
+            <img src="../lab_1/images/mochi.jpg" width="75" />
+            <img src="../lab_1/images/mochi.gif" width="75" />
+            <img src="../lab_1/images/mochi.png" width="75" />
+            <img src="../lab_1/images/mochi.svg" width="75" />
+          </div>
+          <div class = "box">
+            <p>
+              The images above are of four mochi balls, however, they are unqiue as
+              they are made up of different files. The first file is a jpeg image,
+              which is a low storage photo. The second is a gif, which is a moving
+              animation, but its a little lower quality. The third is a png, which
+              is a higher quality image that supports transparent pixels, but cant
+              be enlarged or modified. The last is an svg, which is a vector image
+              and can be manipulated freely wihtout losing image quality.
+            </p>
+          </div>
+        </div>
       </div>
-      <h3>Image Carousel</h3>
       <div>
-        <img src="../lab_1/images/mochi.jpg" width="75" />
-        <img src="../lab_1/images/mochi.gif" width="75" />
-        <img src="../lab_1/images/mochi.png" width="75" />
-        <img src="../lab_1/images/mochi.svg" width="75" />
-      </div>
-      <div>
-        <p>
-          The images above are of four mochi balls, however, they are unqiue as
-          they are made up of different files. The first file is a jpeg image,
-          which is a low storage photo. The second is a gif, which is a moving
-          animation, but its a little lower quality. The third is a png, which
-          is a higher quality image that supports transparent pixels, but cant
-          be enlarged or modified. The last is an svg, which is a vector image
-          and can be manipulated freely wihtout losing image quality.
-        </p>
-      </div>
-      <div>
-        <footer>
+        <footer class = "footer">
           <a
             href="https://github.com/JosueTlapechco"
             target="_blank"
