--- a/client/lab_5/index.html
+++ b/client/lab_5/index.html
@@ -3,3 +3,55 @@
 <!-- If you open /routes/apiRoutes and go to line 38 you will find the server side answer to your request! -->
 
 <!-- Temporarily unhook your script.js file from your main index file -->
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Josue Tlapechco's Lab 4</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="wrapper">
+      <header class="header">
+        <h1>Josue Tlapechco 377 Labs</h1>
+      </header>
+      <div class="container">
+        <div class="left_section box">
+          <h3>Form Inputs</h3>
+          <form
+            action="https://data.princegeorgescountymd.gov/resource/umjn-t2iz.json"
+            class="box main_form"
+          >
+            <label for="resto"></label><input type="text" id="resto" name="resto"/>
+            <button type="submit">Load Data</button>
+            <button type="button" class="filter_button">Filter Data</button>
+          </form>
+        </div>
+        <div class="right_section box">
+          <h3>Local Restaurants</h3>
+          <div class="restuarant_list box">A list of local Restaurants</div>
+        </div>
+      </div>
+      <footer class="footer">
+        <a
+          href="https://github.com/JosueTlapechco"
+          target="_blank"
+          rel="noopener noreferrer"
+          >Josue Tlapechco's github</a
+        >
+      </footer>
+    </div>
+    <script src="script.js"></script>
+  </body>
+</html>
+<!-- Bring in your successful HTML/CSS from the Flexbox lab -->
+<!-- Try typing 'doc' at the top of this file and pressing "tab" -->
+<!-- if your development environment is set up correctly -->
+<!-- the Emmett plugin will set this file up for you -->
+
+<!-- Requirements -->
+<!-- Your page will need a form in it with an 'action' to /api and a single text field with an id/name of "resto" -->
+<!-- If you open /routes/apiRoutes and go to line 38 you will find the server side answer to your request! -->
+
+<!-- This week doesn't have a script.js file in it, because you're focusing on HTML and CSS -->
