--- a/client/lab_8/index.html
+++ b/client/lab_8/index.html
@@ -1,19 +1,20 @@
-<!--
-    This is how to build the CSS-only load animation from loading.io    
-    <div class="lds-ellipsis"><div></div><div></div><div></div><div></div></div>
-
-    This is helpful for showing your client-side users when data is loading,
-    since there's otherwise no sign your app is thinking about something!
-
-    Try placing it at the same level in your element tree as your Submit button
--->
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Josue Tlapechco's Lab 7</title>
+    <title>Josue Tlapechco's Lab 8</title>
+
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css"
+     integrity="sha256-kLaT2GOSpHechhsozzB+flnD+zUyjE2LlfWPgU04xyI="
+     crossorigin=""/>
+     
     <link rel="stylesheet" href="style.css" />
+         <!-- Make sure you put this AFTER Leaflet's CSS -->
+    <script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"
+    integrity="sha256-WBkoXOwTeyKclOHuWtc+i2uENFpDZ9YPdf5Hf+D7ewM="
+    crossorigin=""></script>
+
   </head>
   <body>
     <div class="wrapper">
@@ -24,6 +25,7 @@
         <div class="left_section box">
           <h3>Form Inputs</h3>
           <button type="button" id="data_load">Load County Data</button>
+          <button type="button" id="data_clear">Clear County Data</button>
           <form
             action="https://data.princegeorgescountymd.gov/resource/umjn-t2iz.json"
             class="box main_form"
@@ -39,6 +41,7 @@
         </div>
         <div class="right_section box">
           <h3>Local Restaurants</h3>
+          <div id="map" class = 'box'></div>
           <ol class="box" id="restaurant_list">
             A list of local Restaurants
           </ol>
